Fix weirdness on small screens

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -144,6 +144,7 @@ body {
 
 .fixed-width {
     max-width: 45rem;
+    margin: 0.5rem;
     padding: 0 0.8rem;
     border: dashed darkslategray;
     border-width: 0 1px;
@@ -160,7 +161,8 @@ body {
 }
 
 .sidebar {
-    margin: 1rem 0;
+    margin: 0.5rem;
+    white-space: nowrap;
 }
 
 .toc {
@@ -174,7 +176,6 @@ body {
 }
 
 .toc-contents {
-    white-space: nowrap;
     flex: 1 1 auto;
     overflow:scroll;
     margin: 0 0 0.5rem;
